Server is using eBirdService
